CSS fixes : GameOfLife : set to 100vw, container-g set to 100 vw, mediaQ container-g set to overflow-x hidden and remove the padding, Name.css : mediaQ font-size set to 2.5em for mobile

--- a/src/components/Name/Name.css
+++ b/src/components/Name/Name.css
@@ -21,3 +21,8 @@
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  .name {
+      font-size: 2.5rem;
+  }
+}
