--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -18,7 +18,7 @@
 }
 .game-of-life {
   position: fixed;
-  width: 100wv;
+  width: 100vw;
   height: 100%;
   overflow: hidden;
   /* background: #000; */
